--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11029000.md#1" target="_blank">林辉：救了毛周的人 结局大多很惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/18/n7908087.md#1" target="_blank">三次听法轮功真相 大陆公安腿病神奇康复</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
